css update and fav icon update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <link rel="shortcut icon"  href="./assets/favicon.ico"/>
+    <title>Felix Tsang</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -119,7 +120,7 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Background</h1>
       <div class="experience-details-container">
         <div class="timeline">
           <div class="timeline-item">
@@ -132,11 +133,9 @@
                 <u><i>Digital Transformation Project in a Financial Institution</i></u></div>
                 <ul>
                   <li>Engineered robust RESTful APIs and scalable microservices.</li>
-                  <li>Developed features using Java Spring Boot for backend systems, encompassing underwriting and claim processing procedures.</li>
+                  <li>Developed features using Java Spring Boot for backend systems</li>
                   <li>Enhanced database schemas, achieving a 25-35% decrease in data retrieval time.</li>
-                  <li>Managed automated batch jobs in Azure DevOps, increasing efficiency by 50%.</li>
                   <li>Overhauled user-facing form using React and TypeScript for performance.</li>
-                  <li>Collaborated with a cross-functional team of 10+ team members across regions in Agile and Scrum settings.</li>
               </div>
               <div class="experience-section">
                 <u><i>Tenant Portal System in a Multinational Property Developer</i></u></div>
@@ -430,7 +429,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">lingfung1116@gmail.com</a></p>
+          <p><a href="mailto:lingfung1116@gmail.com" target="_blank">lingfung1116@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -438,7 +437,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/felixtsanglf/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/felixtsanglf/" target="_blank">LinkedIn</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -446,7 +445,7 @@
             alt="GitHub icon"
             class="icon github-icon"
           />
-          <p><a href="https://github.com/lingfung1116">GitHub</a></p>
+          <p><a href="https://github.com/lingfung1116" target="_blank">GitHub</a></p>
         </div>
         
       </div>
