html & css update

--- a/index.html
+++ b/index.html
@@ -129,25 +129,27 @@
             <div class="timeline-time">2022 — 2023</div>
             <div class="timeline-title">Software Engineer • Accenture</div>
             <div class="timeline-subtitle">Application Development Analyst</div>
-            <p class="timeline-content">
+            <div class="timeline-content">
               Delivered high-quality, robust production code for a diverse array of projects for clients including multinational financial institution and property developer
+              <br><br>
               <div class="experience-section">
-                <u><i>Digital Transformation Project in a Financial Institution</i></u></div>
+                <u><i>Digital Transformation Project in a Financial Institution</i></u>
                 <ul>
                   <li>Engineered robust RESTful APIs and scalable microservices.</li>
                   <li>Developed features using Java Spring Boot for backend systems</li>
                   <li>Enhanced database schemas, achieving a 25-35% decrease in data retrieval time.</li>
                   <li>Overhauled user-facing form using React and TypeScript for performance.</li>
+                </ul>
               </div>
               <div class="experience-section">
-                <u><i>Tenant Portal System in a Multinational Property Developer</i></u></div>
+                <u><i>Tenant Portal System in a Multinational Property Developer</i></u>
                 <ul>
                   <li>Created a microservices architecture using Node.js, Kubernetes, and MySQL.</li>
                   <li>Leveraged Docker to containerize backend services, streamlining deployment processes.</li>
                   <li>Utilized Swagger and OpenAPI for well-documented API endpoints.</li>
                 </ul>
               </div>
-            </p>
+            </div>
             <div class="tech-stack">
               <span class="tech-item">Java Spring Boot</span>
               <span class="tech-item">RESTful API</span>
@@ -457,7 +459,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Background</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
