resume update and chatbot update

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Felix Tsang</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <script type="text/javascript">
+      (function(d, m){
+          var kommunicateSettings = 
+              {"appId":"21373a1911c13d8009218195c6b239eaa","popupWidget":true,"automaticChatOpenOnNavigation":true};
+          var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+          s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+          var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+          window.kommunicate = m; m._globals = kommunicateSettings;
+      })(document, window.kommunicate || {});
+  /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+  </script>
   </head>
   <body>
     <nav id="desktop-nav">
@@ -43,7 +54,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Felix Tsang</h1>
+        <h1 class="title">Felix Tsang 👨‍💻</h1>
         <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
           <button
@@ -94,7 +105,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Full-Stack Development</p>
+              <p>2 years <br />Full-Stack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -146,6 +157,7 @@
                 <ul>
                   <li>Created a microservices architecture using Node.js, Kubernetes, and MySQL.</li>
                   <li>Leveraged Docker to containerize backend services, streamlining deployment processes.</li>
+                  <li>Set up databases on AWS RDS and EC2 instances as per requirement.</li>
                   <li>Utilized Swagger and OpenAPI for well-documented API endpoints.</li>
                 </ul>
               </div>
@@ -156,6 +168,7 @@
               <span class="tech-item">Node JS</span>
               <span class="tech-item">React</span>
               <span class="tech-item">Docker</span>
+              <span class="tech-item">AWS</span>
               <!-- Add more tech items as needed -->
             </div>
           </div>
