--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               <span class="tech-item">Java Spring Boot</span>
               <span class="tech-item">RESTful API</span>
               <span class="tech-item">React</span>
-              <span class="tech-item">Docker</span>
+              <span class="tech-item">AWS</span>
               <!-- Add more tech items as needed -->
             </div>
             <div class="btn-container">
@@ -423,7 +423,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/lingfung1116/portfolio-tracker'"
               >
-                Github
+                GitHub
               </button>
             </div>
           </div>
